--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     text-align: right;
 }
 
-.row::after {
+/* .row::after {
     content: "";
     clear: both;
     display: table;
@@ -18,4 +18,57 @@ body {
 
   .column {
       float: right;
+  } */
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color:rgb(144, 144, 144);
+  }
+  
+  li {
+    float: right;
+  }
+  
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: rgb(144, 144, 144);
+  }
+  
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(144, 144, 144);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: rgb(255, 255, 255);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: right;
+  }
+  
+  .dropdown-content a:hover {
+      background-color:rgb(188, 188, 188);
+    }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
   }
