--- a/style.css
+++ b/style.css
@@ -3,14 +3,17 @@
 .container {
     width: 900px;
     margin: auto;
+    position: relative;
 }
 
 body {
     direction: rtl;
     text-align: right;
+    font-family: 'Arial (Hebrew)', Arial;
+    line-height: 1;
 }
 
-/* .row::after {
+.row::after {
     content: "";
     clear: both;
     display: table;
@@ -18,7 +21,7 @@ body {
 
   .column {
       float: right;
-  } */
+  }
 
   ul {
     list-style-type: none;
@@ -72,3 +75,42 @@ body {
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(144, 144, 144);;
+    color: white;
+    text-align: center;
+ }
+
+ .img-container {
+  position: relative;
+  font-family: Arial;
+  width:293px;
+ }
+
+ h3 {
+  padding: 0;
+  margin: 0;
+ }
+ 
+ p {
+   margin: 0px;
+   margin-top: 4px;
+ }
+
+ .text-block {
+  position: absolute;
+  font-size: 13px;
+  width: 228px;
+  height: 77px;
+  bottom: 15px;
+  right: 15px;
+  background-color: rgb(144, 144, 144);
+  color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+}
