--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
 
 .column {
     float: right;
-    justify-content:space-evenly;
 }
 
 .flexcolumn {
@@ -52,41 +51,45 @@ header {
 .menu_home {
     position: absolute;
     display: block;
-    top: 80px;
+    top: 75px;
     right: 150px;
     clip: rect(0px,37px,18px,17px);
     }
 
 
-ul {
+.ulnav {
     list-style-type: none;
     height: 105px;
     position: relative;
     right: 143px;
     top: 65px;
     margin: 0px;
+    font-weight: bold;
 }
 
-li {
-    /* margin: 0 143px 0 0; */
+.dropdown {
     float: right;
+    border-right: 2px solid rgb(168, 168, 168);
 }
 
-li a,
+.dropdown .indiv,
 .dropbtn {
     display: inline-block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 5px 16px;
     text-decoration: none;
+    font-size: 15px;
 }
 
-li a:hover,
+.dropdown .indiv:hover,
 .dropdown:hover .dropbtn {
     background-color: rgb(144, 144, 144);
+    color:rgb(0, 92, 160);
+    text-decoration: underline;
 }
 
-li.dropdown {
+.dropdown {
     display: inline-block;
 }
 
@@ -99,16 +102,26 @@ li.dropdown {
     z-index: 1;
 }
 
-.dropdown-content a {
-    color: rgb(255, 255, 255);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: right;
+.dropdown-content .indiv:first-child {
+    background: linear-gradient(0deg,rgb(144,144,144) 20%, rgb(184,184,184) 98%);
+    padding-top: 15px;
+    margin-top: 0px;
 }
 
-.dropdown-content a:hover {
+.dropdown-content .indiv {
+    color: rgb(255, 255, 255);
+    padding: 6px 6px;
+    /* text-decoration: none; */
+    display: block;
+    text-align: right;
+    font-size: 15px;
+    border-bottom: 1px solid rgb(167, 167, 167);
+}
+
+.dropdown-content .indiv:hover {
     background-color: rgb(188, 188, 188);
+    color:rgb(0, 92, 160);
+    text-decoration: underline;
 }
 
 .dropdown:hover .dropdown-content {
@@ -140,18 +153,17 @@ h3 {
 }
 
 p {
-    margin: px;
     margin-top: 4px;
 }
 
 .text-block {
     position: absolute;
     font-size: 13px;
-    width: 228px;
-    height: 110px;
+    width: 248px;
+    height: 97px;
     bottom: 8px;
     right: 8px;
-    background-color: rgba(144, 144, 144, 0.85);
+    background-color: rgba(120, 120, 120, 0.85);
     color: white;
     padding-left: 10px;
     padding-top: 5px;
@@ -190,4 +202,82 @@ p {
 .map {
     position: relative;
 right: 150px;
+}
+
+.search {
+    position: absolute;
+    top:15px;
+    left: 5px;
+}
+
+.search-button {
+    position: relative;
+    top:5px;
+    left: 4px;
+}
+
+.search-input {
+    width: 132px;
+    border-radius: 0px 8px 0px 0px;
+}
+
+.english {
+    position: absolute;
+    top:25px;
+    left: 175px;
+    font-size: 12px;
+    font-weight: bold;
+    color:white;
+    text-decoration: unset;
+}
+
+.english:hover {
+    text-decoration: underline;
+    color: #005CA0;
+}
+
+.read-more {
+    position: relative;
+    right:176px;
+    bottom: 8px;
+    color: white;
+}
+
+.read-more:hover, .tree {
+    color: rgb(0, 92, 160);
+    background: url(/web/20170614052512im_/http://www.paz.co.il/images/read_more_blue.png) no-repeat left center;
+}
+
+
+.ulmap {
+    float: right;
+    margin-top: 15px;
+    padding: 0px;
+    line-height: 23px;
+    font-weight: normal
+}
+
+.amap:hover {
+    color: rgb(0, 92, 160);
+}
+
+.limap {
+    text-decoration: none;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.amap {
+    margin: 0px;
+    padding: 0px;
+    color: #72716d;
+}
+
+.imgmap {
+    margin-right: 4px;
+}
+
+.amap:hover .imgmap {
+    display: none;
 }
