--- a/style.css
+++ b/style.css
@@ -29,16 +29,16 @@ body {
 
 .flexcolumn {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
 }
 
 .flexrow {
     display: flex;
-    flex-direction: row;    
-} 
+    flex-direction: row;
+}
 
 header {
-    background: linear-gradient(180deg,rgb(144,144,144) 85%, rgb(184,184,184) 98%);
+    background: linear-gradient(180deg, rgb(144, 144, 144) 85%, rgb(184, 184, 184) 98%);
     padding: 0px;
     margin-top: 0px;
 }
@@ -53,8 +53,16 @@ header {
     display: block;
     top: 75px;
     right: 150px;
-    clip: rect(0px,37px,18px,17px);
-    }
+    clip: rect(0px, 37px, 18px, 17px);
+}
+
+.menu_connect {
+    position: absolute;
+    display: block;
+    top: 70px;
+    right: 140px;
+    clip: rect(0px, 18px, 17px, 0px);
+}
 
 
 .ulnav {
@@ -85,7 +93,7 @@ header {
 .dropdown .indiv:hover,
 .dropdown:hover .dropbtn {
     background-color: rgb(144, 144, 144);
-    color:rgb(0, 92, 160);
+    color: rgb(0, 92, 160);
     text-decoration: underline;
 }
 
@@ -103,7 +111,7 @@ header {
 }
 
 .dropdown-content .indiv:first-child {
-    background: linear-gradient(0deg,rgb(144,144,144) 20%, rgb(184,184,184) 98%);
+    background: linear-gradient(0deg, rgb(144, 144, 144) 20%, rgb(184, 184, 184) 98%);
     padding-top: 15px;
     margin-top: 0px;
 }
@@ -120,22 +128,12 @@ header {
 
 .dropdown-content .indiv:hover {
     background-color: rgb(188, 188, 188);
-    color:rgb(0, 92, 160);
+    color: rgb(0, 92, 160);
     text-decoration: underline;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(144, 144, 144);
-    color: white;
-    text-align: center;
 }
 
 .img-container {
@@ -146,6 +144,11 @@ header {
     font-family: Arial;
     width: 293px;
 }
+/* 
+.switch {
+   
+    display:none;
+} */
 
 h3 {
     padding: 0;
@@ -196,23 +199,23 @@ p {
 
 .ads {
     position: relative;
-    top:15px;
+    top: 15px;
 }
 
 .map {
-    position: relative;
-right: 150px;
+    position: absolute;
+    right: 150px;
 }
 
 .search {
     position: absolute;
-    top:15px;
+    top: 15px;
     left: 5px;
 }
 
 .search-button {
     position: relative;
-    top:5px;
+    top: 5px;
     left: 4px;
 }
 
@@ -223,11 +226,11 @@ right: 150px;
 
 .english {
     position: absolute;
-    top:25px;
+    top: 25px;
     left: 175px;
     font-size: 12px;
     font-weight: bold;
-    color:white;
+    color: white;
     text-decoration: unset;
 }
 
@@ -238,16 +241,26 @@ right: 150px;
 
 .read-more {
     position: relative;
-    right:176px;
+    right: 176px;
     bottom: 8px;
     color: white;
 }
 
-.read-more:hover, .tree {
+
+
+.read-more:hover,
+.tree {
     color: rgb(0, 92, 160);
-    background: url(/web/20170614052512im_/http://www.paz.co.il/images/read_more_blue.png) no-repeat left center;
 }
 
+.read-more:hover .tree {
+    visibility: hidden;
+}
+
+.read-more:hover .himgmap {
+    visibility: visible;
+    margin-right: -8px;
+}
 
 .ulmap {
     float: right;
@@ -278,6 +291,69 @@ right: 150px;
     margin-right: 4px;
 }
 
-.amap:hover .imgmap {
-    display: none;
+.himgmap {
+    visibility: hidden;
+    margin-right: -6px;
 }
+
+
+.amap:hover .imgmap {
+    visibility: hidden;
+}
+
+.amap:hover .himgmap {
+    visibility: visible;
+}
+
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 38px;
+    background: linear-gradient(0deg, rgb(144, 144, 144) 45%, rgb(184, 184, 184) 98%);
+    color: white;
+    text-align: right;
+}
+
+.footernav {
+    display: block;
+    position: relative;
+    font-size: 14px;
+    margin-top: 16px;
+    bottom: 5px;
+}
+
+.footerul {
+padding-right: 0px;
+}
+
+.footerli {
+    list-style: none;   
+}
+
+.footera {
+    color: #fff;
+    text-decoration: none;
+    border-right:  1.5px solid #fff;
+    padding-right:8px ;
+    padding-left: 2px;
+}
+
+.footerul>.footerli>.footera:hover {
+    text-decoration:underline;
+    color: rgb(0, 92, 160);
+}
+
+.footera:first-child {
+    position: relative;
+    bottom: -3px;
+    border-right: 0px; 
+}
+
+.footera:last-child {
+color:red;
+}
+
+
+
