--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ header {
     font-family: Arial;
     width: 293px;
 }
+
 /* 
 .switch {
    
@@ -325,54 +326,216 @@ p {
 }
 
 .footerul {
-padding-right: 0px;
+    padding-right: 0px;
 }
 
 .footerli {
-    list-style: none;   
+    list-style: none;
 }
 
 .footera {
     color: #fff;
     text-decoration: none;
-    border-right:  1.5px solid #fff;
-    padding-right:8px ;
+    border-right: 1.5px solid #fff;
+    padding-right: 8px;
     padding-left: 2px;
 }
 
 .footerul>.footerli>.footera:hover {
-    text-decoration:underline;
+    text-decoration: underline;
     color: rgb(0, 92, 160);
 }
 
 .footera:first-child {
     position: relative;
     bottom: -3px;
-    border-right: 0px; 
+    border-right: 0px;
 }
 
 .footera:last-child {
-color:red;
+    color: red;
 }
 
 
 /* form */
 
+.pad {
+    padding-top: 32px;
+}
+
+.left-arrow {
+    border-color: transparent black;
+    border-style: solid;
+    border-width: 5px 5px 5px 0px;
+    height: 0px;
+    width: 0px;
+    display: inline-block;
+    padding-right: 0px;
+    margin-right: 0px;
+}
+
+.navside {
+    background: linear-gradient(0deg, rgb(204, 204, 204) 0%, rgb(255, 255, 255) 80%);
+    border-top: 1px solid rgb(197, 197, 197);
+    width: 110px;
+    height: 38px;
+    padding-right: 0px;
+    padding-top: 10px;
+    font-size: 13px;
+
+}
+
+.navsidea {
+    text-decoration: none;
+    color: black
+}
+
+.h2 {
+    font-size: 15px;
+    color: #005ca0;
+    padding: 0px;
+    margin: 0px;
+}
+
+.bold {
+    font-weight: bold;
+    font-size: 13px;
+    margin: 5px 0;
+    color: #6d6d6d;
+}
+
+.px12 {
+    font-size: 12px;
+    color: #72716d;
+    margin-bottom: 5px;
+}
+
 .form {
-    background-image: url("images/images/contact_form_bg.png");
+    background-image: url('images/images/contact_form_bg.png');
     background-repeat: no-repeat;
-    background-size: cover;
-    /* position: relative; */
+    width: 385px;
+    height: 357px;
+    padding: 12px 18px;
+}
+
+.innerform {
+    width: 245px;
+    height: 216px;
+    margin: 10px auto 0;
+}
+
+.fillin {
+    /* width: 216px;
+    height: 246px; */
+    display: block;
+    padding: 0px;
+    margin: 3px;
+    font-size: 12px;
+}
+
+label~.width {
+    display: inline-block;
+    width: 160px;
+    padding: 0px;
+    margin: 0px;
+}
+
+.fillin>label {
+    width: 70px;
+    display: inline-block;
+    padding: 0px;
+    margin: 0px;
+}
+
+.width {
+    height: 23px;
+    padding: 0px;
+    margin: 0px;
+}
+
+.buttons {
+    position: relative;
+    right: 198px;
+    bottom: 5px;
+    color:white;
+    border-radius: 0px 12px 0px 0px;
+    background: linear-gradient(180deg,#ffffff 0%, #005ca0 45%);
+}
+
+.secondfild {
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-right: 64px;
+    height: 200px;
 }
 
 .form2 {
-    background-image: url("images/images/cube_bg.png");
+    background-image: url('images/images/cube_bg.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    height: 175px;
+    width: 292px;
+    padding: 18px 22px 15px;
 }
 
 .form3 {
-    background-image: url("images/images/cube_bg.png");
+    background-image: url('images/images/cube_bg.png');
     background-repeat: no-repeat;
-    background-size: cover
+    height: 175px;
+    width: 292px;
+    padding: 18px 22px 15px;
+}
+
+.leftcolumn {
+    margin-right: 22px;
+}
+
+.navmain {
+    font-size: 12px;
+    margin-bottom: 25px;
+    color: #5c5c5c;
+}
+
+.navmaina {
+    text-decoration: none;
+}
+
+.navmaina:hover {
+    text-decoration: underline;
+    color: #005CA0;
+}
+
+.h1cont {
+    color: #72716d;
+    font-size: 15px;
+    font-weight: bold;
+    border-bottom: 1px solid #cbcbcb;
+    margin-bottom: 12px;
+    padding-bottom: 4px;
+    display: block;
+}
+
+.h3 {
+    font-size: 15px;
+    color: #005ca0;
+    margin-bottom: 10px;
+}
+
+b {
+    font-size: 13px;
+    color: #6d6d6d;
+
+}
+
+.px13 {
+    font-size: 13px;
+    color: #6d6d6d;
+}
+
+.px13a {
+    display: block;
+    font-size: 13px;
+}
+
+.footerli>.different {
+    color: white;
 }
